# ros2-node-map

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  README_zh.md  SPEC.md  plan.md
.agents/: PLAN.md  SPEC.md
.ua/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
app/: index.html  package-lock.json  package.json  tsconfig.app.json
app/electron/: cli.ts  main.ts  preload.ts  runtime.ts  tsconfig.json
app/scripts/: package-backend.mjs  patch-appimage-launcher.cjs  prepare-electron-icon.mjs
app/src/: DetailPanel.tsx  DomainControl.tsx  GraphView.tsx  Sidebar.tsx  api.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
app/src/graph/: DetailsView.tsx  ExplorerView.tsx  GraphPanelView.tsx  GraphSessionStore.ts  ToolbarView.tsx  downloads.ts  exporters.ts  snapshot.ts  useGraphSession.ts
app/src/workbench/: PanelErrorBoundary.tsx  PanelRegistry.ts  ReactPanelWidget.tsx  WorkbenchShell.ts  bootstrap.ts  commands.ts  layoutPersistence.ts  workbench.css
app/tests/: appimage-build.test.mjs  cli.test.mjs  export.test.mjs  package-config.test.mjs  runtime.test.mjs
backend/: pyproject.toml
backend/ros2_node_map/: __init__.py  action_reader.py  filters.py  graph_model.py  graph_reader.py  graph_server.py  main.py  service_reader.py
backend/tests/: test_graph_model.py  test_graph_reader.py  test_graph_server.py  test_main.py
docs/: appimage-build.md  architecture.md  development.md  getting-started.md  graph-json-schema.md  graph.schema.json  roadmap.md  testing.md
scripts/: appimage-builder.Dockerfile  build-appimages.sh  install-node-map.sh  version.mjs
